# OpenAuric

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  auric_requirements_spec.md  pyproject.toml
.auric/: SOUL.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yaml
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh  update.ps1  update.sh
src/auric/: __init__.py  cli.py
src/auric/brain/: llm_gateway.py  rlm.py
src/auric/core/: config.py  (+7 more)
templates/: AGENT.md  HEARTBEAT.md  USER.md
templates/grimoire/: ABILITIES.md  FOCUS.md  MEMORY.md  SPELLS.md
templates/memories/: FOCUS.md
tests/: conftest.py  manual_test_config.py  manual_test_daemon.py  manual_test_focus.py  manual_test_gateway.py  manual_test_heartbeat.py  manual_test_librarian.py  manual_test_rlm.py  manual_verify_spells.py  test_architecture.py  test_brain_integration.py  test_concurrent_sessions.py  test_core_logic.py  test_discord_filtering_logic.py  test_discord_pact.py  test_integration.py  test_memory.py  test_pact_manager_logic.py  test_routing_order.py  test_safety.py  test_sandbox.py  test_smoke.py  test_startup_fix.py  test_tool_registry.py  verify_structure.py
tests/brain/: test_llm_gateway.py  test_rlm.py
tests/core/: test_bootstrap.py  test_config.py  test_daemon.py  test_database.py  test_heartbeat.py  test_pairing.py  test_session_router.py  test_system_logger.py
tests/memory/: test_chroma_store.py  test_chronicles.py  test_embeddings.py  test_focus_manager.py  test_librarian.py  test_vector_store.py
tests/spells/: test_tool_registry.py
(+33 files in other folders)
